k3s/unifi-parental-controls/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-parental-controls-api
  namespace: unifi-parental-controls
  labels:
    app: unifi-parental-controls-api
spec:
  selector:
    app: unifi-parental-controls-api
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-parental-controls-ui
  namespace: unifi-parental-controls
  labels:
    app: unifi-parental-controls-ui
spec:
  selector:
    app: unifi-parental-controls-ui
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
